# company

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  tasks.ps1  test_db.py
.github/workflows/: check.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7727f42f4d9a_initial_schema.py
backend/app/: config.py  crud.py  dependencies.py  main.py
backend/app/core/: encryption.py  security.py
backend/app/db/: models.py  session.py
backend/app/repositories/: admin.py  bot.py  claw_key.py
backend/app/schemas/: auth.py  bot.py  chat.py
backend/app/services/: chat_service.py
backend/scripts/: init_env.py
backend/tests/: conftest.py  test_auth.py  test_bots.py  test_chat.py  test_claw.py  test_config.py  test_encryption.py  test_security.py
docs/: overhaul-report.md  overhaul-report.ru.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/api/: auth.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: ChatView.vue  DashboardBots.vue  LoginView.vue
nginx/: nginx.conf
