[project]
name = "ai-bot-manager-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Bot Manager personal web app."
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg==0.30.0",
    "bcrypt==4.0.1",
    "cryptography==43.0.3",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "langchain==0.3.15",
    "langchain-core==0.3.31",
    "langgraph==0.2.60",
    "langgraph-checkpoint-postgres==2.0.25",
    "loguru==0.3.2",
    "passlib[bcrypt]==1.7.4",
    "pgvector==0.3.4",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "redis==5.1.1",
    "setuptools",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
